--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8" name="description" content="Junior Data Scientist">
     <title>RESUME</title>
+</head>
+<body>
+<header>
     <h1>Жарков Григорий</h1>
     <h2>Junior Data Scientist</h2>
     <pre>
@@ -20,8 +23,9 @@
         ⠀⠀⠀⠀⠀⠀⣀⣀⣈⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇
         ⠀⠀⠀⠀⠀⠀⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠃
     </pre>
-</head>
-<body>
+</header>
+<main>
+
 <article>
     Я решил развиваться в сфере машинного обучения, потому что со школы занимался математикой, учавствовал
     в олимпиадах, изучал Python. <br>Мне нравится, что анализ данных находится на стыке математики и программирования,
@@ -102,7 +106,8 @@
         <li> Цифровой прорыва 2021 на площадке All Cups </li>
     </ul>
 </section>
-</body>
+</main>
+
 <footer>
     <section> Контакты
         <p> <a href="mailto:grigorii_al@mail.ru">grigorii_al@mail.ru</a> &nbsp;
@@ -112,4 +117,6 @@
         </p>
     </section>
 </footer>
+
+</body>
 </html>
