style: added css for header and footer

--- a/resume.html
+++ b/resume.html
@@ -2,29 +2,16 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8" name="description" content="Junior Data Scientist">
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <title>RESUME</title>
 </head>
 <body>
 <header>
-    <h1>Жарков Григорий</h1>
-    <h2>Junior Data Scientist</h2>
-    <pre>
-        ⠰⡿⠿⠛⠛⠻⠿⣷
-        ⠀⠀⠀⠀⠀⠀⣀⣄⡀⠀⠀⠀⠀⢀⣀⣀⣤⣄⣀⡀
-        ⠀⠀⠀⠀⠀⢸⣿⣿⣷⠀⠀⠀⠀⠛⠛⣿⣿⣿⡛⠿⠷
-        ⠀⠀⠀⠀⠀⠘⠿⠿⠋⠀⠀⠀⠀⠀⠀⣿⣿⣿⠇
-        ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠁
-
-        ⠀⠀⠀⠀⣿⣷⣄⠀⢶⣶⣷⣶⣶⣤⣀
-        ⠀⠀⠀⠀⣿⣿⣿⠀⠀⠀⠀⠀⠈⠙⠻⠗
-        ⠀⠀⠀⣰⣿⣿⣿⠀⠀⠀⠀⢀⣀⣠⣤⣴⣶⡄
-        ⠀⣠⣾⣿⣿⣿⣥⣶⣶⣿⣿⣿⣿⣿⠿⠿⠛⠃
-        ⢰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄
-        ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡁
-        ⠈⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠁
-        ⠀⠀⠛⢿⣿⣿⣿⣿⣿⣿⡿⠟
-        ⠀⠀⠀⠀⠀⠉⠉⠉
-    </pre>
+    <div class="info">
+        <img class="info__image" src="images/me.jpg" width="250" height="250">
+        <h1>Жарков Григорий</h1>
+        <h2>Junior Data Scientist</h2>
+    </div>
 </header>
 <main>
 
@@ -54,7 +41,7 @@
 <section> Навыки
 <ul>
     <li>Python: Scikit-learn, Pandas, NumPy, Matplotlib, Django</li>
-    <li>SQL: PostgreSQl, Microsoft SQL Server</li>
+    <li>SQL: PostgreSQL, Microsoft SQL Server</li>
     <li>MS Excel, Tableau</li>
     <li>Git</li>
 </ul>
