--- a/resume.html
+++ b/resume.html
@@ -5,21 +5,23 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <title>RESUME</title>
 </head>
+
 <body>
-<header>
-    <div class="info">
-        <img class="info__image" src="images/me.jpg" width="250" height="250">
+
+<div class="head">
+    <section class="head__info">
         <h1>Жарков Григорий</h1>
         <h2>Junior Data Scientist</h2>
-    </div>
-</header>
-<main>
+        <img class="head__info__image" src="images/me.jpg" width="250" height="250">
+    </section>
 
-<article>
+</div>
+
+<div class="motivation">
     Я решил развиваться в сфере машинного обучения, потому что со школы занимался математикой, учавствовал
     в олимпиадах, изучал Python. <br>Мне нравится, что анализ данных находится на стыке математики и программирования,
     потому что так я могу совмещать свои два любимых дела.
-</article>
+</div>
 
 <br>
 
@@ -38,32 +40,30 @@
 
 <br>
 
-<section> Навыки
-<ul>
-    <li>Python: Scikit-learn, Pandas, NumPy, Matplotlib, Django</li>
-    <li>SQL: PostgreSQL, Microsoft SQL Server</li>
-    <li>MS Excel, Tableau</li>
-    <li>Git</li>
-</ul>
+<div class="main">
+
+<section class="main__skills"> Навыки
+    <ul class="main__skills__list">
+        <li>Python: Scikit-learn, Pandas, NumPy, Matplotlib, Django</li>
+        <li>SQL: PostgreSQL, Microsoft SQL Server</li>
+        <li>MS Excel, Tableau</li>
+        <li>Git</li>
+    </ul>
 </section>
 
-<section> Образование
-    <ul>
+<section class="main__education"> Образование
+    <ul class="main__education__list">
         <li>Университет ИТМО, 2020 - 2024</li>
         <li>Самарский региональный центр для одаренных детей, 2018 - 2020</li>
     </ul>
 </section>
 
-<section> Опыт разработки
-    <ul>
+<section class="main__experience"> Опыт разработки
+    <ul class="main__experience__list">
         <li> Веб-сервис на Django для музыкальных рекомендаций </li>
         <li> Реализация линейных алгоритмов машинного обучения в виде Python-модулей </li>
         <pre><code>
      def __gradient_descent(self, x: np.ndarray, y: np.ndarray) -> np.ndarray:
-        """
-        Полынй градиентный спуск, сходимость которого задается в параметрах модели (рассчитывается через ошибку на текущем и предыдущем шаге).
-        В качестве коэффициента при антиградиенте используется простейший динамический шаг = 1 / номер итерации.
-        """
 
         w = np.ones(x.shape[1])  # инициализируем веса
         q = self.__calculate_loss(x, y, w, np.arange(0, x.shape[0]))  # считаем потерю для первоначального приближения
@@ -89,14 +89,14 @@
     </ul>
 </section>
 
-<section> Участие в соревнованиях
-    <ul>
-        <li> Titanic на площадке Kaggle </li>
+<section class="main__competitions"> Участие в соревнованиях
+    <ul class="main__competitions__list">
+        <li> Хакатон "Нефтекод" при поддержке Газпромнефти</li>
         <li> Цифровой прорыва 2021 на площадке All Cups </li>
+        <li> Titanic на площадке Kaggle </li>
     </ul>
 </section>
-</main>
-
+</div>
 <footer>
     <section> Контакты
         <p> <a href="mailto:grigorii_al@mail.ru">grigorii_al@mail.ru</a> &nbsp;
