code: added second html and css files

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8" name="description" content="Junior Data Scientist">
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/home_style.css"/>
     <title>RESUME</title>
 </head>
 
@@ -13,6 +14,10 @@
         <span class="head__info__first-header">Жарков Григорий</span>
         <span class="head__info__second-header">Junior Data Scientist</span>
     </section>
+</div>
+
+<div class="navigation">
+    <a class="navigation__projects" href="projects.html">К заметкам о проектах</a>
 </div>
 
 <div class="about-me">
@@ -35,8 +40,6 @@
     </aside>
     <br>
 </div>
-
-<br>
 
 <div class="main">
 
@@ -144,7 +147,7 @@ def __gradient_descent(self, x: np.ndarray, y: np.ndarray) -> np.ndarray:
         </section>
     </section>
 </footer>
-</body>
 
+</body>
 
 </html>
