code: moved nav, added second button

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 
 <body class="page">
 
+<div class="navigation">
+    <a class="navigation__home-button" href="index.html">На главную</a>
+    <a class="navigation__projects-button" href="projects.html">К заметкам о проектах</a>
+</div>
+
 <div class="head">
     <section class="head__info">
         <span class="head__info__first-header">Жарков Григорий</span>
         <span class="head__info__second-header">Junior Data Scientist</span>
     </section>
-</div>
-
-<div class="navigation">
-    <a class="navigation__projects" href="projects.html">К заметкам о проектах</a>
 </div>
 
 <div class="about-me">
