code: page loading time script

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" name="description" content="Junior Data Scientist">
     <link rel="stylesheet" type="text/css" href="css/home_style.css"/>
+    <script src="scripts/loading-time.js"></script>
     <title>RESUME</title>
 </head>
 
@@ -22,7 +23,7 @@
 </div>
 
 <div class="about-me">
-    <img class="about-me__image" src="images/me.jpg">
+    <img class="about-me__image" src="images/me.jpg" alt="Моя фотография">
     <section class="about-me__motivation">
         Я решил развиваться в сфере машинного обучения, потому что со школы занимался математикой, учавствовал
         в олимпиадах, изучал Python. <br>Мне нравится, что анализ данных находится на стыке математики и программирования,
@@ -146,6 +147,9 @@ def __gradient_descent(self, x: np.ndarray, y: np.ndarray) -> np.ndarray:
             <a class="footer__contacts__button" href="https://github.com/grigoriizharkov" target="_blank">GitHub</a> &nbsp;
             <a class="footer__contacts__button" href="https://t.me//grigoriizharkov" target="_blank">Telegram</a>
         </section>
+    </section>
+
+    <section class="footer__loading-time">
     </section>
 </footer>
 
