--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
   </div>
 
   <div class="first-project__image">
-    <img class="first-project__image__first-image" src="images/linreg.png">
+    <img class="first-project__image__first-image" src="images/linreg.png" alt="Полиномиальная регрессия">
   </div>
 
 </div>
@@ -64,8 +64,8 @@
   </div>
 
   <div class="second-project__images">
-    <img class="second-project__images__first-image" src="images/tree.png">
-    <img class="second-project__images__second-image" src="images/tree_score.png">
+    <img class="second-project__images__first-image" src="images/tree.png" alt="Визуализация решающего дерева">
+    <img class="second-project__images__second-image" src="images/tree_score.png" alt="Результаты на метриках качества">
   </div>
 
 </div>
