code: active button script

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8" name="description" content="Junior Data Scientist">
     <link rel="stylesheet" type="text/css" href="css/home_style.css"/>
     <script src="scripts/loading-time.js"></script>
+    <script src="scripts/active-button.js"></script>
     <title>RESUME</title>
 </head>
 
 <body class="page">
 
 <div class="navigation">
-    <a class="navigation__home-button" href="index.html">На главную</a>
-    <a class="navigation__projects-button" href="projects.html">К заметкам о проектах</a>
+    <a class="navigation__button" href="index.html">На главную</a>
+    <a class="navigation__button" href="projects.html">К заметкам о проектах</a>
 </div>
 
 <div class="head">
