--- a/projects.html
+++ b/projects.html
@@ -4,14 +4,15 @@
 <head>
   <meta charset="UTF-8" name="description" content="Projects connected to Machine Learning">
   <link rel="stylesheet" type="text/css" href="css/projects_style.css"/>
+  <script src="scripts/active-button.js"></script>
   <title>NOTES ABOUT PROJECTS</title>
 </head>
 
 <body class="page">
 
 <div class="navigation">
-  <a class="navigation__home-button" href="index.html">На главную</a>
-  <a class="navigation__projects-button" href="projects.html">К заметкам о проектах</a>
+  <a class="navigation__button" href="index.html">На главную</a>
+  <a class="navigation__button" href="projects.html">К заметкам о проектах</a>
 </div>
 
 <div class="head">
