code: third page

--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,7 @@
 <div class="navigation">
   <a class="navigation__button" href="index.html">На главную</a>
   <a class="navigation__button" href="projects.html">К заметкам о проектах</a>
+  <a class="navigation__button" href="todo-list.html">К списку дел</a>
 </div>
 
 <div class="head">
