code: todo-list

--- a/todo-list.html
+++ b/todo-list.html
@@ -23,6 +23,20 @@
     </section>
 </div>
 
+<header>
+    <div class="todo">
+        <h1 id="todo__header">TODO list</h1>
+        <form class="todo__form">
+            <input class="todo__form__input" type="text" placeholder="Input task...">
+            <button class="todo__from__button" type="submit">+</button>
+        </form>
+        <ul class="todo__items"></ul>
+    </div>
+
+    <script src="scripts/list-operations.js"></script>
+</header>
+
+
 </body>
 
 </html>
