--- a/projects.html
+++ b/projects.html
@@ -71,8 +71,15 @@
   </div>
 
 </div>
+<div id="comments">
 
-
+  <div class="preloader">
+    <img src="images/loading-cat.gif"/>
+    <p>Загрузка комментариев...</p>
+  </div>
+</div>
+<i style="font-size:3vh" class="exception">Oops</i>
+<script src="scripts/comments.js"></script>
 </body>
 
 </html>
